--- a/index.html
+++ b/index.html
@@ -137,21 +137,18 @@
       
        <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="C:\Users\ASUS\Pictures\latian html\mariil\xas.JPG" />
+        <img src="https://raw.githubusercontent.com/Shaldzabila/multipage_mariil/main/ccx.JPG" />
       </div>
 
       <div class="mySlides fade">
-        <img src="C:\Users\ASUS\Downloads\foto\Captureee.jpg" />
+        <img src="https://raw.githubusercontent.com/Shaldzabila/multipage_mariil/main/csd.JPG" />
       </div>
 
       <div class="mySlides fade">
-        <img src="C:\Users\ASUS\Pictures\latian html\mariil\ccx.JPG" />
+        <img src="https://raw.githubusercontent.com/Shaldzabila/multipage_mariil/main/xas.JPG" />
       </div>
 
-      <div class="mySlides fade">
-        <img src="C:\Users\ASUS\Pictures\latian html\mariil\csd.JPG" />
-      </div>
-
+     
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
